add section secrets

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -430,6 +430,28 @@ html
 
 
 
+
+
+
+            section.secrets
+                div.secrets__inner.container
+                    h2.secrets__title.section__title.section__title_white Секреты организации идеальной свадьбы
+                    div.consultation__wrapper
+                        ul.consultation__list
+                            li.consultation__item.consultation__item_normal На консультации мы расскажем:
+                            li.consultation__item Как сэкономить до 15% свадебного бюджета.
+                            li.consultation__item Как выбрать и проверить ведущего, фотографа, оператора, декоратора.
+                            li.consultation__item Какие вопросы задавать на собеседовании.
+                            li.consultation__item Какую площадку выбрать и как обойти пробковый сбор.
+                            li.consultation__item Что лучше, выездная регистрация или ЗАГС.
+                            li.consultation__item Почему, стоит избегать агентства, которые работают за %?
+                        form.consultation-form
+                            p.consultation-form__title Консультация свадебного специалиста с опытом организации #[strong более 200 свадеб!]
+                            input.consultation-form__field.consultation-form__field_name(type="text" placeholder="Ваше имя" name="name" required)
+                            input.consultation-form__field.consultation-form__field_phone(type="text" placeholder="Номер телефона" name="name" required)
+                            input.consultation-form__button.button(type="submit" value="Получить консультацию")
+
+
         footer.footer.page__footer
 
         script(src="js/jquery.min.js")
