--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -848,6 +848,82 @@ button
   background: url(../img/section_projects/arrow_down.png) 0 0 no-repeat
   background-size: 100%
 
+.secrets
+  background: url(../img/section_secrets/feedback_form_background.jpg) 0 0 no-repeat
+  background-size: cover
+  position: relative
 
+.secrets__inner
+  padding: 80px 0 40px
+
+.consultation__wrapper
+  width: 100%
+  display: flex
+  justify-content: space-around
+  align-items: center
+  margin-top: 70px
+
+.consultation__list
+  max-width: 460px
+
+.consultation-form
+  max-width: 360px
+  max-height: 450px
+  padding: 45px 30px 0
+
+.consultation__list
+  color: #fff
+  font-size: 28px
+  line-height: 1.1
+  font-weight: 700
+
+.consultation__item_normal
+  font-weight: 400
+
+.consultation__item
+  margin-bottom: 20px
+
+.consultation-form
+  background-color: #fff
+  border-radius: 15px
+
+.consultation-form__title
+  font-size: 27px
+  color: $main-color
+  text-align: center
+  line-height: 1.3
+  margin-bottom: 25px
+
+.consultation-form__field
+  margin: 0 6px 20px
+  width: 100%
+  font-size: 20px
+  color: #898989
+  padding: 5px 30px
+  border-radius: 5px
+  position: relative
+
+.consultation-form__field_name
+  background: url(../img/svg/profile.svg) 1% 50% no-repeat
+  background-size: 20px
+
+.consultation-form__field_phone
+  background: url(../img/svg/phone-receiver.svg) 1% 50% no-repeat
+  background-size: 20px
+
+
+.consultation-form__button
+  margin-top: 15px
+  color: #fff
+  padding: 10px 15px
+  width: 100%
+  font-size: 24px
+  margin-bottom: 55px
+
+.consultation-form__button:hover
+  box-sizing: border-box
+  color: $main-color
+  background-color: #fff
+  border: 2px solid $main-color
 
 @import "helpers/media"
