--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -128,7 +128,6 @@ button
 .text
   display: block
   font-size: 16px
-  white-space: nowrap
 
 .text_uppercase
   text-transform: uppercase
@@ -162,7 +161,6 @@ button
   display: block
   text-decoration: none
   font-size: 18px
-
 
 .button
   display: inline-block
@@ -804,8 +802,8 @@ button
   &:last-child
     margin-right: 0
 
-.project__photo
 
+.project__photo
   width: 165px
   height: 165px
   margin: 0 auto
@@ -825,6 +823,7 @@ button
   font-family: $title-font
   font-size: 28px
   color: $main-color
+  line-height: 1.3
 
 .projects__information
   color: $main-color
@@ -898,7 +897,7 @@ button
   margin: 0 6px 20px
   width: 100%
   font-size: 20px
-  color: #898989
+  color: $gray-color
   padding: 5px 30px
   border-radius: 5px
   position: relative
@@ -919,11 +918,108 @@ button
   width: 100%
   font-size: 24px
   margin-bottom: 55px
+  transition: all 0.25s ease
 
 .consultation-form__button:hover
   box-sizing: border-box
   color: $main-color
   background-color: #fff
   border: 2px solid $main-color
+
+.footer
+  background-color: #0a0a0a
+
+.footer__inner
+  padding: 25px 0
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-around
+  align-items: center
+  color: #fff
+
+.logo__image_footer
+  width: 100px
+  height: 100px
+
+.footer__title
+  color: $gray-color
+
+.social__item
+  margin-right: 10px
+  display: inline-block
+  &:last-child
+    margin-right: 0
+
+.social__link
+  display: inline-block
+  width: 52px
+  height: 52px
+  border-radius: 50%
+  background: $main-color url(../img/footer/spritesheet.png) no-repeat
+  vertical-align: middle
+  opacity: 0.7
+  transition: opacity 0.2s ease
+  &:hover
+    opacity: 1
+
+.social__link_vk
+  background-position: -11px -81px
+
+.social__link_instagram
+  background-position: -81.5px -11px
+
+.social__link_facebook
+  background-position: -11px -11px
+
+.social__link_whatsapp
+  background-position: -81.5px -81px
+
+.social__link_youtube
+  background-position: -154px -11px
+
+.telephone__number_icon-phone, .telephone__number_icon-smartphone
+  padding-left: 25px
+  position: relative
+  &:before
+    display: block
+    content: ""
+    width: 16px
+    height: 16px
+    position: absolute
+    left: 0
+    top: 5px
+
+.telephone__number_icon-phone
+  &::before
+    background: url(../img/svg/telephone.svg) no-repeat
+    background-size: 100%
+
+
+.telephone__number_icon-smartphone
+  &::before
+    background: url(../img/svg/smartphone.svg) no-repeat
+    background-size: 100%
+
+
+
+
+.copyright
+  width: 100%
+  text-align: center
+  color: $gray-color
+  font-size: 16px
+
+.copyright__icon
+  font-size: 18px
+  padding-right: 5px
+
+.copyright__text
+  display: inline-block
+  margin-right: 10px
+
+.copyright__link
+  color: inherit
+
+
 
 @import "helpers/media"
