--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -38,23 +38,23 @@ html
                     div.menu__text Меню
                     ul.nav
                         li.nav__item
-                            a.nav__link(#) Главная
+                            a.nav__link(href="#about") Главная
                         li.nav__item
-                            a.nav__link(#) Услуги
+                            a.nav__link(href="#services") Услуги
                         li.nav__item
-                            a.nav__link(#) Портфолио
+                            a.nav__link(href="#portfolio") Портфолио
                         li.nav__item
-                            a.nav__link(#) Стоимость
+                            a.nav__link(href="#price") Стоимость
                         li.nav__item
-                            a.nav__link(#) Наша команда
+                            a.nav__link(href="#team") Наша команда
                         li.nav__item
-                            a.nav__link(#) Площадка-партнер
+                            a.nav__link(href="#partner") Площадка-партнер
                         li.nav__item
-                            a.nav__link(#) Контакты
+                            a.nav__link(href="#feedback") Контакты
                         li.nav__item
-                            a.nav__link(#) Не свадебные проекты
+                            a.nav__link(href="#projects") Не свадебные проекты
                         li.nav__item
-                            a.nav__link(#) Наша команда
+                            a.nav__link(href="#secrets") Наша команда
                 div.header__title
                     span.text.text_uppercase.text_bold Группа компаний Emerald
                     span.text Организация свадебных торжеств
@@ -69,7 +69,7 @@ html
                             | +7 (985) 394-10-57
 
                 div.button
-                    a.button__text(href="#")
+                    a.button__text.popup-link(href="#popup__form")
                         |Заказать звонок
 
 
@@ -81,7 +81,7 @@ html
                             |Наш 10 летний опыт организации свадебных торжеств<br>
                             |Поможет Вам сэкономить до 15% от свадебного бюджета<br>
                             |И около 3-х месяцев, самостоятельной подготовки.
-            section.about
+            section.about#about
                 div.about__inner.container
                     iframe.video.about__video(width="100%" height="310" src="https://www.youtube.com/embed/J_WHx738YB8?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
                     div.information
@@ -97,7 +97,7 @@ html
                             | – это целый мир, который дарит мечты.
                         div.instagram
                             span.instagram__link #МойМирМойEmerald
-            section.services
+            section.services#services
                 div.services__inner.container
                     h2.section__title.section__title_white Услуги
                     div.services_box
@@ -125,7 +125,7 @@ html
                         div.service_item.service_item_artists
                             div.service_item__title Артисты
                             p.service_item__text Разнообразить артистами зону велком, украсить банкетный вечер ярким выступлением, #[b поставить «вишенку на торт» в завершении вечера.]
-            section.portfolio
+            section.portfolio#portfolio
                 div.portfolio__inner.container
                     h2.portfolio__title.section__title Портфолио
                     div.porfolio_item__wrapper
@@ -186,7 +186,7 @@ html
                     div.instagram
                         span.instagram__text Следите за нами в инстаграмме:
                         span.instagram__link.text_uppercase #my_world_my_emerald
-            section.price
+            section.price#price
                 div.price__inner.container
                     h2.price__title.section__title.section__title_white Стоимость
                     div.prices__wrapper
@@ -236,10 +236,10 @@ html
                             |или оставьте заявку:
                     div.button__wrapper
                         div.button
-                            a.button__text.button__text_big(href="#")
+                            a.button__text.button__text_big.popup-link(href="#popup__form")
                                 |Оставить заявку
 
-            section.team
+            section.team#team
                 div.team__inner.container
                     h2.team__title.section__title Наша команда
                     div.team__wrapper
@@ -304,7 +304,7 @@ html
 
 
 
-            section.partner
+            section.partner#partner
                 div.partner__inner.container
                     h2.partner__title.section__title Наша площадка-партнер – #[br] Кафе-шатры «Русская сказка»
                     div.photo__wrapper
@@ -331,7 +331,7 @@ html
 
 
 
-            section.feedback
+            section.feedback#feedback
                 div.feedback__inner.container
                     h2.feedback__title.section__title.section__title_white Отзывы
                     div.feedback-slider
@@ -399,7 +399,7 @@ html
 
 
 
-            section.projects
+            section.projects#projects
                 div.projects__inner.container
                     h2.projects__title.section__title Наши не свадебные проекты
                     span.projects__description Также, мы организуем такие мероприятия, как:
@@ -420,20 +420,8 @@ html
                                 | +7 (495) 195-57-22
                             | или заполните форму на следующем экране
                     div.projects__navigation
-                        div.arrow-down
-
-
-
-
-
-
-
-
-
-
-
-
-            section.secrets
+                        a.arrow-down(href="#secrets")
+            section.secrets#secrets
                 div.secrets__inner.container
                     h2.secrets__title.section__title.section__title_white Секреты организации идеальной свадьбы
                     div.consultation__wrapper
@@ -445,11 +433,17 @@ html
                             li.consultation__item Какую площадку выбрать и как обойти пробковый сбор.
                             li.consultation__item Что лучше, выездная регистрация или ЗАГС.
                             li.consultation__item Почему, стоит избегать агентства, которые работают за %?
-                        form.consultation-form
-                            p.consultation-form__title Консультация свадебного специалиста с опытом организации #[strong более 200 свадеб!]
-                            input.consultation-form__field.consultation-form__field_name(type="text" placeholder="Ваше имя" name="name" required)
-                            input.consultation-form__field.consultation-form__field_phone(type="text" placeholder="Номер телефона" name="name" required)
-                            input.consultation-form__button.button(type="submit" value="Получить консультацию")
+                        div.consultation-form__wrapper
+                            form.consultation-form
+                                p.consultation-form__title Консультация свадебного специалиста с опытом организации #[strong более 200 свадеб!]
+                                input.consultation-form__field.consultation-form__field_name(type="text" placeholder="Ваше имя" name="name" pattern="^[а-яА-Я][а-яА-Я0-9-_\\.]{1,30}$" required)
+                                input.consultation-form__field.consultation-form__field_phone(type="text" placeholder="Номер телефона" name="name" pattern="[0-9]{2,15}" required)
+                                input.consultation-form__button.button(type="submit" value="Получить консультацию")
+                            div.consultation-form_success
+                                div.consultation-form__close x
+                                div.consultation-form__img
+                                span.consultation-form__text #[strong Ваша заявки принята!] В ближайшее время мы с вами свяжемся.
+
 
         footer.footer.page__footer
             div.footer__inner.container
@@ -483,6 +477,19 @@ html
                         |2017  Все права защищены
                     a.copyright__link(href="#") Политика конфиденциальности
 
+
+        div.popup__form#popup__form.mfp-hide
+            div.consultation-form__wrapper
+                div.consultation-form__close x
+                form.consultation-form
+                    p.consultation-form__title Консультация свадебного специалиста с опытом организации #[strong более 200 свадеб!]
+                    input.consultation-form__field.consultation-form__field_name(type="text" placeholder="Ваше имя" name="name" pattern="^[а-яА-Я][а-яА-Я0-9-_\\.]{1,30}$" required)
+                    input.consultation-form__field.consultation-form__field_phone(type="text" placeholder="Номер телефона" name="name" pattern="[0-9]{2,15}" required)
+                    input.consultation-form__button.button(type="submit" value="Получить консультацию")
+                div.consultation-form_success
+
+                    div.consultation-form__img
+                    span.consultation-form__text #[strong Ваша заявки принята!] В ближайшее время мы с вами свяжемся.
 
         script(src="js/jquery.min.js")
         script(src="js/libs.min.js")
