make adaptive header

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -68,7 +68,7 @@ html
                         a.telephone__number.text_bold(href="tel:+79853941057")
                             | +7 (985) 394-10-57
 
-                div.button
+                div.button.header__button
                     a.button__text.popup-link(href="#popup__form")
                         |Заказать звонок
 
