--- a/app/styles/helpers/media.sass
+++ b/app/styles/helpers/media.sass
@@ -4,13 +4,51 @@
   /**/
 
 @media only screen and (max-width : 992px)
-  /**/
+  .header__title
+    display: none
+  .logo
+    display: none
+  .promo__title
+    font-size: 28px
 
 @media only screen and (max-width : 768px)
-  /**/
+  .telephone
+    display: none
+  .header__inner
+    padding-top: 9px
+  .consultation-form__wrapper
+    height: 370px
+  .consultation-form
+    padding: 30px 30px 0
+  .consultation-form__title, .consultation-form__text
+    font-size: 20px
+  .consultation-form__button
+    font-size: 20px
+  .promo__inner
+    display: none
+
 
 @media only screen and (max-width : 480px)
-  /**/
+  .menu__text
+    display: none
+  .nav
+    width: 100%
+    top: 70px
+    left: 0
+  .nav__item
+    text-align: center
+  .consultation-form__wrapper
+    height: 370px
+  .consultation-form
+    padding: 30px 20px 0
+  .consultation-form__title, .consultation-form__text
+    font-size: 18px
+  .consultation-form__button
+    font-size: 18px
+  .consultation-form__img
+    width: 180px
+    height: 180px
 
 @media only screen and (max-width : 320px)
-  /**/
+  .header__button
+    display: none
