make adaptive section about, services, portfolio

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -128,7 +128,7 @@ html
             section.portfolio#portfolio
                 div.portfolio__inner.container
                     h2.portfolio__title.section__title Портфолио
-                    div.porfolio_item__wrapper
+                    div.portfolio_item__wrapper
                         div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_1.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Александра и Юлии
@@ -144,12 +144,12 @@ html
                                 span.portfolio_item__description Свадьба Евгения и Тамары
                             div.portfolio_item__icon
 
-                        div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_4.png)")
+                        div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_9.png)")
                             div.portfolio_item_description__wrapper
-                                span.portfolio_item__description Свадьба Дмитрия и Анны
+                                span.portfolio_item__description Свадьба Владислава и Дарьи
                             div.portfolio_item__icon
 
-                        div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_5.png)")
+                        div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_5.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Александра и Анастасии
                             div.portfolio_item__icon
@@ -169,9 +169,9 @@ html
                                 span.portfolio_item__description Свадьба Валентина и Галины
                             div.portfolio_item__icon
 
-                        div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_9.png)")
+                        div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_4.png)")
                             div.portfolio_item_description__wrapper
-                                span.portfolio_item__description Свадьба Владислава и Дарьи
+                                span.portfolio_item__description Свадьба Дмитрия и Анны
                             div.portfolio_item__icon
 
                         div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_10.png)")
