--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -252,6 +252,7 @@ section
 .instagram
   display: block
   text-align: center
+  margin: 10px
 
 .instagram__link
   color: $main-color
@@ -302,15 +303,15 @@ section
   color: #fff
   margin: 0 5px 40px
   padding-left: 180px
+  min-height: 135px
   &::before
     display: block
     content: ""
     position: absolute
     left: 0
     width: 165px
-    min-height: 165px
-    background-image: url("../img/section_services/spritesheet.png")
-    background-repeat: no-repeat
+    height: 165px
+    background: url("../img/section_services/spritesheet.png") 0 0 no-repeat
 
 .service_item_organisation::before
   background-position: -355px -5px
@@ -336,6 +337,8 @@ section
 .service_service_item:nth-of-type(5n+1), .service_item:nth-of-type(5n+2)
   width: 40%
 
+
+
 .service_item__title
   font-size: 24px
   font-weight: 700
@@ -347,35 +350,42 @@ section
   position: relative
   background: url(../img/section_portfolio/portfolio_background.png) 0 0 no-repeat
   background-size: cover
-  margin-top: -15px
-  margin-bottom: -15px
+  margin-top: -20px
+  margin-bottom: -20px
   z-index: 1
 
 .portfolio__inner
   padding: 60px 0 80px
 
-.porfolio_item__wrapper
+.portfolio_item__wrapper
   max-width: 970px
   margin: 30px auto 15px
+  display: grid
+  justify-content: center
+  grid-template-columns: 390px 290px 290px
   &::after
     content: ""
     display: block
     clear: both
 
+
 .portfolio_item
   width: 290px
   min-height: 230px
   background-repeat: no-repeat
+  background-size: cover
   position: relative
   cursor: pointer
-  float: left
 
 .portfolio_item_wide
   width: 390px
 
 .portfolio_item_high
   height: 460px
-  float: right
+
+.portfolio_item_high
+  grid-column: 3/4
+  grid-row: 2/4
 
 .portfolio_item_description__wrapper
   position: absolute
@@ -661,7 +671,7 @@ section
 
 .partner-feature__line:nth-child(2n)
   margin-left: 35px
-    
+
 .partner-feature__line:nth-child(2n+1) .partner-feature:first-child,
 .partner-feature__line:nth-child(2n) .partner-feature:nth-child(2)
   width: 25%
@@ -966,7 +976,7 @@ section
   color: #fff
   padding: 10px 15px
   width: 100%
-  font-size: 24px
+  font-size: 21px
   margin-bottom: 55px
   transition: all 0.25s ease
 
