make adaptive sections price, projects, secrets, footer

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -200,8 +200,8 @@ html
                                 span.price_item__paragraph – Отвечает за зону выездной регистрации
                                 span.price_item__paragraph – Отвечает на все волнующие вопросы
                             div.price__box
-                                span.price__value 17 000
-                                span.price__icon
+                                span.price__value 17 000 ₽
+
 
                         div.price_item
                             div.price_item__title Организация #[br]свадьбы
@@ -213,8 +213,7 @@ html
                                 span.price_item__paragraph –В день свадьбы на площадке работают: #[em свадебный распорядитель+2 координатора].
                                 span.price_item__paragraph.price_item_big Вы отдыхаете!
                             div.price__box
-                                span.price__value 37 000
-                                span.price__icon
+                                span.price__value 37 000 ₽
 
                         div.price_item
                             div.price_item__title PREMIUM #[br] Организация свадьбы
@@ -224,8 +223,7 @@ html
                                 span.price_item__paragraph – С утра ВАС будет сопровождать координатор, который возьмет на себя хлопоты первой половины дня.
                                 span.price_item__paragraph –В день свадьбы на площадке работают: #[em свадебный распорядитель+2 координатора].
                             div.price__box
-                                span.price__value 57 000
-                                span.price__icon
+                                span.price__value 57 000 ₽
 
 
                     div.consultation__information
