--- a/app/styles/helpers/media.sass
+++ b/app/styles/helpers/media.sass
@@ -32,6 +32,15 @@
   .portfolio_item_wide
     width: 290px
 
+  .price_item__title
+    font-size: 20px
+  .price__value
+    font-size: 30px
+  .price_item__text
+    font-size: 16px
+
+  .consultation__list
+    font-size: 24px
 
 @media only screen and (max-width : 768px)
   .promo
@@ -75,8 +84,27 @@
   .portfolio_item:nth-of-type(2n)
     display: none
 
+  .prices__wrapper
+    justify-content: center
+  .price_item
+    width: 51%
+
+  .consultation__text
+    font-size: 20px
+  .consultation__telephone
+    font-size: 20px
+
+  .consultation__wrapper
+    flex-wrap: wrap
+
+  .projects__information
+    padding: 0 20px
 
 @media only screen and (max-width : 480px)
+
+  .section__title
+    font-size: 38px
+
   .promo
     min-height: 500px
   .menu__text
@@ -115,6 +143,27 @@
     font-size: 22px
   .instagram__text
     font-size: 18px
+
+  .price_item
+    width: 85%
+
+  .consultation__list
+    font-size: 20px
+  .consultation__item
+    margin-bottom: 10px
+  .secrets__title
+    font-size: 32px
+  .consultation__wrapper
+    margin-top: 50px
+
+
+  .projects__title
+    margin-bottom: 20px
+  .projects__description
+    font-size: 24px
+  .social__item
+    margin-right: 3px
+    margin-top: 10px
 
 @media only screen and (max-width : 320px)
   .header__button
