--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -548,19 +548,21 @@ section
   margin-top: 40px
 
 .ceo
-  display: flex
-  position: relative
-  left: 16%
-  margin-bottom: 25px
+  margin: 0 auto 25px
+  text-align: center
 
 .ceo__photo
+  display: inline-block
   width: 260px
   height: 260px
-  position: absolute
+  background-repeat: no-repeat
+  margin-right: 15px
 
 .ceo__text
-  padding-left: 300px
-  max-width: 750px
+  display: inline-block
+  text-align: left
+  margin: 0 15px
+  max-width: 460px
   color: $main-color
   line-height: 1.5
 
@@ -585,7 +587,7 @@ section
   justify-content: space-around
 
 .member
-  width: 24%
+  width: 25%
   display: flex
   flex-direction: column
 
@@ -596,6 +598,7 @@ section
   width: 165px
   height: 165px
   margin: 20px auto 0
+  background-repeat: no-repeat
 
 .member__text
   color: $main-color
@@ -629,12 +632,15 @@ section
 
 
 .partner__photo
+  min-width: 261px
   width: 27%
   height: 220px
   background-repeat: no-repeat
   background-size: cover
+  margin: 0 5px 10px
 
 .partner__photo_wide
+  min-width: 360px
   width: 39%
 
 .features__wrapper
@@ -650,9 +656,10 @@ section
   box-sizing: border-box
 
 .partner-feature__line
-  margin-bottom: 30px
+  margin-bottom: 15px
   display: flex
   justify-content: center
+  flex-wrap: wrap
 
 
 .partner-feature
@@ -662,6 +669,7 @@ section
   margin-right: 35px
   counter-reset: feature
   counter-increment: partner__counter
+  margin-bottom: 15px
 
 
 .partner-feature__line:nth-child(2n + 1) .partner-feature
@@ -703,7 +711,7 @@ section
   background: url(../img/section_feedback/feedback_background.png) center no-repeat
   background-size: cover
   position: relative
-  margin-top: -15px
+  margin-top: -25px
   margin-bottom: -15px
   z-index: 1
 
@@ -712,7 +720,7 @@ section
 
 .feedback-slider
   margin-top: 40px
-  padding: 0 100px
+  padding: 0 50px
   position: relative
   .slick-dots
     li
@@ -742,15 +750,16 @@ section
 
 
 .feedback-slider__item
-  width: 100%
+  width: 90%
   max-width: 465px
   display: flex
-  justify-content: space-between
+  flex-wrap: wrap
+  justify-content: center
   color: $main-color
-  height: 310px
+  height: 350px
   border-radius: 15px
   padding: 30px 20px
-  margin-bottom: 30px
+  margin: 0 auto 30px
   background: #fff url(../img/section_feedback/feedback_item_background.png) right bottom no-repeat
 
 .feedback-slider__author
@@ -758,10 +767,13 @@ section
   text-align: center
 
 .feedback-slider__photo
-  width: 140px
+  min-width: 140px
   height: 140px
   margin-bottom: 10px
   border-radius: 50%
+
+.feedback-slider__photo, .feedback-slider__text
+  width: 49%
 
 .feedback-slider__name
   font-size: 24px
@@ -777,6 +789,7 @@ section
   line-height: 1.2
 
 .projects
+
   background-color: #fff
   background-size: cover
   position: relative
