--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,4 +1,4 @@
-@import 'helpers/fonts'
+@import 'fonts'
 @import 'helpers/libs'
 @import 'helpers/vars'
 
@@ -27,6 +27,7 @@ button
 
 html, body
   width: 100%
+  background-color: #fff
 
 section
   width: 100%
@@ -906,7 +907,7 @@ section
   border-radius: 15px
   text-align: center
   position: relative
-  margin: 15px
+  margin: 15px auto
 
 .consultation-form
   padding: 40px 30px 0
@@ -1092,12 +1093,70 @@ section
 .copyright__link
   color: inherit
 
-.popup__form
+.request_popup__form
   width: 100%
   max-width: 360px
   margin: 50px auto
   .mfp-close
     display: none
+
+
+#preloader
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background-color: #fff
+  z-index: 100
+
+#loader
+  display: block
+  position: relative
+  left: 50%
+  top: 50%
+  width: 150px
+  height: 150px
+  margin: -75px 0 0 -75px
+  border-radius: 50%
+  border: 3px solid transparent
+  border-top-color: $main-color
+  animation: spin 2s linear infinite
+  &:before
+    content: ""
+    position: absolute
+    top: 5px
+    left: 5px
+    right: 5px
+    bottom: 5px
+    border-radius: 50%
+    border: 3px solid transparent
+    border-top-color: #AF0022
+    animation: spin 3s linear infinite
+  &:after
+    content: ""
+    position: absolute
+    top: 15px
+    left: 15px
+    right: 15px
+    bottom: 15px
+    border-radius: 50%
+    border: 3px solid transparent
+    border-top-color: #BC7300
+    animation: spin 1.5s linear infinite
+
+@-webkit-keyframes spin
+  0%
+    transform: rotate(0deg)
+  100%
+    transform: rotate(360deg)
+
+
+@keyframes spin
+  0%
+    transform: rotate(0deg)
+  100%
+    -webkit-transform: rotate(360deg)
 
 
 @import "helpers/media"
